--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                <li><i class="fa fa-star"></i></li>
                <li><i class="fa fa-star"></i></li>
             </ul>
-            <span class="moves">0</span> Moves
+            <span class="
+                         s">0</span> Moves
             <div class="timer">0:00
             </div>
             <div class="restart">
@@ -94,8 +95,8 @@
          <span class="game-over">GAME OVER!</span><br>
          <span class="stars-text">Stars:  </span>
          <span class="stars-modal"> </span><br>
-         <span class="moves-text">Moves: </span>
-         <span class="moves-modal"> </span><br>
+         <span class="move-text">Moves: </span>
+         <span class="move-modal"> </span><br>
          <span class="time-text">Time: </span>
          <span class="time-modal"> </span><br>
          <span class="play-again-text">PLAY AGAIN?</span>
