--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
       <link rel="stylesheet" href="css/responsive.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    </head>
-<!--
-  TODO: Make game accessible
-  TODO: Improve refresh by refreshing when one card is flipped
-  TODO: Add animation to flipping cards
--->
    <body>
       <div class="container">
          <header>
@@ -27,8 +22,7 @@
                <li><i class="fa fa-star"></i></li>
                <li><i class="fa fa-star"></i></li>
             </ul>
-            <span class="
-                         s">0</span> Moves
+            <span class="move">0</span> Moves
             <div class="timer">0:00
             </div>
             <div class="restart">
